--- a/css/tyyli.css
+++ b/css/tyyli.css
@@ -1,14 +1,61 @@
-﻿body {
+body {
 	background-color: grey;
 }
 
 .well{
+    border-radius: 0px;
 	background-color: white;
 	width: 100%;
 max-width: 1000px;
+
 margin: 0 auto;
+    border-bottom: 1px solid grey;
 }
 
-.alku{
-	margin-top: 50px;
+.alku {
+    margin-top: 50px;
+	display: flex;
+    justify-content: center;
+        min-height: 500px;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
+
+.inner {
+    align-self: center;
+}
+
+.pyorea{
+     border-radius: 50%;
+    border: 1px solid grey;
+}
+.navigointikuva{
+    max-width: 125px;
+}
+
+
+.main{
+      display: inline-block;
+  vertical-align: middle;
+  line-height: normal;
+}
+
+.navigointi{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.minusta{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+table{
+    background-color:whitesmoke;
+    border: 1px solid grey;
+}
+
+    table.borderless td,table.borderless th{
+     border: none !important;
+}
+
+
