--- a/css/tyyli.css
+++ b/css/tyyli.css
@@ -2,6 +2,11 @@ body {
 	background-color: grey;
 }
 
+.h1, .h2, .h3, h1, h2, h3 {
+    margin-top: 0px !important;
+    margin-bottom: 20px;
+}
+
 .well{
     border-radius: 0px;
 	background-color: white;
@@ -49,6 +54,11 @@ margin: 0 auto;
     padding-bottom: 50px;
 }
 
+.osaaminen{
+       padding-top: 50px;
+    padding-bottom: 50px; 
+}
+
 table{
     background-color:whitesmoke;
     border: 1px solid grey;
@@ -56,6 +66,42 @@ table{
 
     table.borderless td,table.borderless th{
      border: none !important;
+}
+
+.skills{
+        background-color:whitesmoke;
+    border: 1px solid grey;
+    padding: 5px 5px 0px 5px;
+    max-width: 300px;
+    margin-bottom:20px;
+}
+
+.skill-good{
+    background-color:green;
+    font-size: 18px;
+    color:white;
+    border-radius: 5px;
+    padding:2px;
+    margin-bottom: 5px;
+    display: inline-block;
+} 
+.skill-mid{
+    background-color:yellowgreen;
+    font-size: 14px;
+    color:black;
+    border-radius: 5px;
+    padding:2px;
+    margin-bottom: 5px;
+    display: inline-block;
+}
+.skill-bad{
+    background-color:red;
+    font-size: 12px;
+    color:white;
+    border-radius: 5px;
+    padding:2px;
+    margin-bottom: 5px;
+    display: inline-block;
 }
 
 
