--- a/css/tyyli.css
+++ b/css/tyyli.css
@@ -58,6 +58,10 @@ margin: 0 auto;
        padding-top: 50px;
     padding-bottom: 50px; 
 }
+.portfolio{
+          padding-top: 50px;
+    padding-bottom: 50px;  
+}
 
 table{
     background-color:whitesmoke;
@@ -105,3 +109,49 @@ table{
 }
 
 
+
+a {
+    text-decoration: none;
+}
+a.darken {
+    display: block;
+    margin: 0 auto;
+    width: auto;
+    display: block;
+    background: black;
+    padding: 0;
+    position:relative;
+    overflow: hidden;
+    text-align: center;
+    max-width:300px;
+}
+a.darken img {
+    width: 100%;
+    display: block;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+}
+a.darken:hover img {
+    opacity: 0.1;
+}
+a.darken span {
+    display: block;
+    height: 100%;
+    visibility:hidden;
+    position: absolute;
+    width: 100%;
+    top: 50%;
+    font-size:26px;
+}
+a.darken:hover span {
+    color:#fff;
+    visibility:visible;
+    -webkit-transition: all 0.2s linear;
+    -moz-transition: all 0.2s linear;
+    -ms-transition: all 0.2s linear;
+    -o-transition: all 0.2s linear;
+    transition: all 0.2s linear;
+}
