--- a/css/tyyli.css
+++ b/css/tyyli.css
@@ -1,16 +1,38 @@
 body {
-	background-color: grey;
+	background-image: url(../img/background2.png);
+    font-family: 'Ubuntu', sans-serif;
 }
 
-.h1, .h2, .h3, h1, h2, h3 {
+.h1, .h2, h1, h2{
+    font-family: 'Amatic SC', cursive;
     margin-top: 0px !important;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
+    color:darkgreen;
 }
+h3, h4{margin-top: 25px !important}
+
+
+h1 {
+  font-size: 60px ;
+}
+h2 {
+  font-size: 50px ;
+}
+h3 {
+    font-size: 24px ;
+}
+h4 {
+    font-size: 20px ;
+}
+p {
+    font-size: 16px ;
+}
+
 
 .well{
     border-radius: 0px;
 	background-color: white;
-	width: 100%;
+	width: 95%;
 max-width: 1000px;
 
 margin: 0 auto;
@@ -189,3 +211,71 @@ a.darken:hover span {
     padding: 10px; 
     box-shadow: 0 0 20px rgba(0,0,0,0.4); 
 }
+
+input, textarea{width: 100%;}
+
+.error{
+    color:red;
+}
+
+#chat{
+    border: 2px solid green;
+    border-radius: 10px;
+    padding: 5px;
+    box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    min-height:200px;
+   
+}
+#chat > p{
+     font-family: Courier;
+    font-size:12px;
+}
+
+.btn-success{background-color: darkgreen !important;}
+
+span.glyphicon {
+    font-size: 5vw;
+    color: darkgreen;
+}
+
+a, a:hover {
+  color: inherit; /* blue colors for links too */
+  text-decoration: inherit; /* no underline */
+}
+
+.linkki:hover
+{ 
+    z-index: 2;
+    -webkit-transition: all 200ms ease-in;
+    -webkit-transform: scale(1.2);
+    -ms-transition: all 200ms ease-in;
+    -ms-transform: scale(1.2);   
+    -moz-transition: all 200ms ease-in;
+    -moz-transform: scale(1.2);
+    transition: all 200ms ease-in;
+    transform: scale(1.2);
+}
+
+.linkedin {
+  -webkit-transition: all 0.5s ease;
+     -moz-transition: all 0.5s ease;
+       -o-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+          transition: all 0.5s ease;
+}
+ 
+.linkedin:hover {
+  -webkit-transform: rotate(10deg);
+     -moz-transform: rotate(10deg);
+       -o-transform: rotate(10deg);
+      -ms-transform: rotate(10deg);
+          transform: rotate(10deg);
+}
+
+
+
+
+
+
+
+
