--- a/css/tyyli.css
+++ b/css/tyyli.css
@@ -515,4 +515,22 @@ input#slide4:checked ~ .nav-dots label#img-dot-4
 	background: rgba(0, 0, 0, 1);
 }
 
+.tuomiopaiva {
 
+}
+
+.tuomiopaiva-iframe {
+    display:block;
+    max-width: 500px;
+    margin: auto;
+}
+
+.tuomiopaiva-countdown {
+    font-size:40px;
+    color: red;
+    font-weight: bold;
+    margin-bottom: 25px;
+}
+.sanat {
+    margin-top: 25px;
+}
